# CorESP32_FS

./: BUILD.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
bootloader_components/corefs_boot/: CMakeLists.txt  corefs_boot.c
components/corefs/: CMakeLists.txt
components/corefs/include/: corefs.h  corefs_config.h  corefs_types.h
components/corefs/src/: corefs_block.c  corefs_btree.c  corefs_core.c  corefs_crc32.c  corefs_file.c  corefs_inode.c  corefs_mmap.c  corefs_recovery.c  corefs_superblock.c  corefs_transaction.c  corefs_vfs.c  corefs_wear.c
main/: CMakeLists.txt  main.c
